# jacin

./: CLAUDE.md  Cargo.toml  DESIGN.md  IDEA.md  LICENSE  PLAN-rpc-optimization.md  README.md  TASK.md
.github/workflows/: test.yml
src/: candidate_window.rs  config.rs  coordinator.rs  dispatch.rs  input.rs  keysym.rs  main.rs  neovim.rs  text_render.rs
src/neovim/: event_source.rs  handler.rs  integration_tests.rs  mod.rs  protocol.rs
src/neovim/lua/: auto_commit.lua  autocmds.lua  completion_cmp.lua  completion_native.lua  key_handlers.lua  snapshot.lua  write_commit.lua
src/state/: animation.rs  ime.rs  keyboard.rs  keypress.rs  mod.rs  repeat.rs  wayland.rs
src/ui/: candidate_window.rs  keypress_window.rs  layout.rs  mod.rs  text_render.rs  unified_window.rs
tests/fixtures/: candidates_and_select.json  cmdline_and_cancel.json  insert_and_commit.json  nvim_exit.json
