[package]
name = "custom-ime"
version = "0.1.0"
edition = "2024"

[dependencies]
# Wayland core
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }

# Event loop
calloop = { version = "0.14", features = ["signals"] }
calloop-wayland-source = "0.4"

# Error handling
anyhow = "1"

# Channels with timeout
crossbeam-channel = "0.5"

# Keyboard handling
xkbcommon = "0.8"
libc = "0.2"

# Neovim backend
nvim-rs = { version = "0.9", features = ["use_tokio"] }
tokio = { version = "1", features = ["rt", "process", "io-util", "sync", "time"] }

# Rendering
tiny-skia = "0.11"
fontdue = "0.9"
fontdb = "0.16"

# Buffer management
memmap2 = "0.9"

# Signal handling
signal-hook = "0.3"
